Rough code: generate and write nonce into encrypted file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,6 @@ name = "vault_cli"
 path = "src/cli/cli.rs"
 
 [dependencies]
-ring = "0.7.1"
-itertools = "0.5.9"
+ring = "0.7.1" # Used for core crypto
+itertools = "0.5.9" # Used for formatting byte arrays into hex representations
+odds = "0.2.25" # Odds and ends used for its Vector Extensions
