--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,7 @@ rust:
   - nightly
 env:
   - RUST_TEST_THREADS=1
+script:
+  - cargo build --verbose
+  - cargo test --verbose
+  - cargo test --verbose -- --ignored
